tests/compile/derive-invalid-default-strategy.stderr
error[E0308]: mismatched types
 --> $DIR/derive-invalid-default-strategy.rs:7:20
  |
7 |   #[merge(strategy = my_custom_merge_strategy)]
  |  ____________________^
8 | | struct S {
9 | |     field1: u16,
  | |__________^ expected `u8`, found `u16`
  |
  = note: expected mutable reference `&mut u8`
             found mutable reference `&mut u16`

error[E0308]: mismatched types
 --> $DIR/derive-invalid-default-strategy.rs:7:20
  |
7 |   #[merge(strategy = my_custom_merge_strategy)]
  |  ____________________^
8 | | struct S {
9 | |     field1: u16,
  | |__________^ expected `u8`, found `u16`
  |
help: you can convert an `u16` to `u8` and panic if the converted value wouldn't fit
  |
7 | #[merge(strategy = my_custom_merge_strategy)]
8 | struct S {
9 |     field1.try_into().unwrap(): u16,
  |
